# Copyright 2018 Red Hat Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "yacfg"
version = "0.9.3"
description = "Template based configuration files generator based on jinja2 and yaml."
authors = ["Zdenek Kraus <zkraus@redhat.com>", "Dominik Lenoch <dlenoch@redhat.com>"]
maintainers = ["Dominik Lenoch <dlenoch@redhat.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rh-messaging-qe/yacfg"
documentation = "https://rh-messaging-qe.github.io/yacfg/"
repository = "https://github.com/rh-messaging-qe/yacfg.git"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
    'Topic :: System :: Installation/Setup',
    'Topic :: System :: Systems Administration',
    'Topic :: Text Processing',
    'Topic :: Utilities'
]
packages = [
    { include = "yacfg", from = "src" },
    { include = "yacfg_batch", from = "src" },

]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rh-messaging-qe/yacfg/issues"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^3.1.2"
PyYAML = "^6.0"
colorlog = { version = ">=5.0.1,<7.0.0", optional = true }
colorama = { version = "^0.4.4", optional = true }
importlib-metadata = { version = "<4.8.1", python = "<3.8" }
jinja2-ansible-filters = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
mypy = "^1.0"
mock = "^5.0.1"
tox = "^3.28.0"
coverage = "^7.2"
yamllint = "^1.31.0"
pre-commit = "^2.19.0"
jupyter-book = "^0.15.1"
types-Jinja2 = "^2.11.9"
types-PyYAML = "^6.0.12"
black = "^23.1"

[tool.poetry.extras]
color_log = ["colorama", "colorlog"]

[tool.poetry.scripts]
yacfg = 'yacfg.yacfg_cli:main'
yacfg-batch = 'yacfg_batch.yacfg_batch_cli:main'

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
